Color tool tip covering right click menu for the grease pencil in the outliner #44477

Closed
opened 2015-04-21 22:13:06 +02:00 by David · 9 comments

System Information
Windows 7 64bit, 8GB memory, AMD Radeon HD 5700 Graphics card

Blender Version
Broken:
2.74 000dfc0
2.74.4 e3a6440 (latest from build bot)

Short description of error
When right clicking on the colors for the Grease pencil in the ouliner, if tool tips are enabled, the tool tip can cover the menu.
GP_icon.png
tool_tip_overlap.png

Exact steps for others to reproduce the error
Right click on the either of the colors for the Grease pencil (the icon space) before the tool tip shows up.
tool_tip_overlap.png

**System Information** Windows 7 64bit, 8GB memory, AMD Radeon HD 5700 Graphics card **Blender Version** Broken: 2.74 000dfc0 2.74.4 e3a6440 (latest from build bot) **Short description of error** When right clicking on the colors for the Grease pencil in the ouliner, if tool tips are enabled, the tool tip can cover the menu. ![GP_icon.png](https://archive.blender.org/developer/F165172/GP_icon.png) ![tool_tip_overlap.png](https://archive.blender.org/developer/F165152/tool_tip_overlap.png) **Exact steps for others to reproduce the error** Right click on the either of the colors for the Grease pencil (the icon space) **before** the tool tip shows up. ![tool_tip_overlap.png](https://archive.blender.org/developer/F165174/tool_tip_overlap.png)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Davd

Added subscriber: @Davd
Member

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Julian Eisel self-assigned this 2015-04-21 22:49:34 +02:00
Member

This isn't really a bug, this is an expected behaviour. It is hard to make Blender smart enough so that this works fine in all cases. Working fine in all cases would mean placing it for the user memorizable/predictable, while not overlapping any buttons/colliding with any Window borders etc. IMHO the current way we position them (horizontally aligned to the cursor, vertically aligned to the button) is quite okay, not perfect but okay. Simply disabling them within menus also wouldn't be a good idea since they still contain useful information, also for buttons within menus.

Anyway, even if we had the "perfect" design ready, this wouldn't be a bug as currently everything works as intended, we would consider it as a todo.

But thanks for the report nevertheless

This isn't really a bug, this is an expected behaviour. It is hard to make Blender smart enough so that this works fine in all cases. Working fine in all cases would mean placing it for the user memorizable/predictable, while not overlapping any buttons/colliding with any Window borders etc. IMHO the current way we position them (horizontally aligned to the cursor, vertically aligned to the button) is quite okay, not perfect but okay. Simply disabling them within menus also wouldn't be a good idea since they still contain useful information, also for buttons within menus. Anyway, even if we had the "perfect" design ready, this wouldn't be a bug as currently everything works as intended, we would consider it as a todo. But thanks for the report nevertheless
Member

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'
Member

Actually misinterpreted the report, can see now what you mean and indeed this shouldn't happen.

Fix incoming.

Actually misinterpreted the report, can see now what you mean and indeed this shouldn't happen. Fix incoming.

This issue was referenced by 18aaae101a

This issue was referenced by 18aaae101afe7ae4c120d656e85bd078d0995ea7
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 18aaae101a.

Closed by commit 18aaae101a.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44477
No description provided.